{{$NEXT}}
    Remove dependency on Data::Dumper

1.122590  2012-09-15 16:02:14 Europe/London
    Initial version.