@@ -1,5 +1,6 @@
 {{$NEXT}}
-    Remove dependency on Data::Dumper
+    Fix populating the availabilities membership data.
+    Remove dependency on Data::Dumper.
 
 1.122590  2012-09-15 16:02:14 Europe/London
     Initial version.
